--- a/vignettes/user_guide.Rmd
+++ b/vignettes/user_guide.Rmd
@@ -29,16 +29,24 @@ A 'river_net' object is constructed using three pieces of required data: river l
 
 Rivers can be imported from either the path to a shapefile or an object of the 'sf' class. This function performs some basic error checking, extracts the largest fully connected component in the supplied data, and calculates river lengths. A plot with changes highlighted in red is printed alongside the function unless the 'quiet' parameter is set to 'TRUE'. River importing is illustrated below with the path to a shapefile representing the Yamaska river lines.
 ```{r}
+# Loading river sf object
+yamaska_riv <- readRDS("../data/yamaska_riv")
+
 # Importing rivers from a shapefile
-rivers_in <- import_rivers(rivers = "../inst/extdata/yamaska_riv.shp")
+rivers_in <- import_rivers(rivers = yamaska_riv)
 ```
 
 Similarly, all point data can be imported with the 'import_points' function along with the 'type' parameter specifying the type of point. Possible values are: "barriers", "outlet", or "poi" (for points of interest).
 ```{r}
+# Loading sf objects
+yamaska_bar <- readRDS("../data/yamaska_bars")
+yamaska_outlet <- readRDS("../data/yamaska_outlet")
+yamaska_poi <- readRDS("../data/yamaska_poi")
+
 # Import barriers
-barriers_in <- import_points("..inst/extdata/yamaska_bars.shp", type = "barriers")
-outlet_in <- import_points("../inst/extdata/yamaska_out.shp", type = "outlet")
-poi_in <- import_points("../inst/extdata/yamaska_poi.shp", type = "poi")
+barriers_in <- import_points(pts = yamaska_bar, type = "barriers")
+outlet_in <- import_points(pts = yamaska_outlet, type = "outlet")
+poi_in <- import_points(pts = yamaska_poi, type = "poi")
 barriers_in
 ```
 
