--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,12 @@ The goal of the `dci` package is to provide an R interface to the Dendritic Conn
 
 ## Installation
 
-Coming soon
+To install the package from this github page follow these instructions
+```{r}
+require(devtools)
+install_github("aarkilanian/dci")
+```
+
 
 ## Example
 
