--- a/README.Rmd
+++ b/README.Rmd
@@ -20,17 +20,16 @@ knitr::opts_chunk$set(
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 <!-- badges: end -->
 
-The goal of the `dci` package is to provide an R interface to the Dendritic Connectivity Index allowing for the analysis of longitudinal connectivity across river networks with ease.
+The `dci` package provides an R interface to the Dendritic Connectivity Index (DCI) allowing for the analysis of longitudinal connectivity in river networks. Given a set of spatial data representing river lines, barrier point locations and the location of the watershed's outlet the `dci` package provides tools to calculate ecological connectivity with the DCI. There are options to calculate the potamodromous or diadromous form of the DCI as well as options to consider a distance threshold and/or weights to be applied to river lengths.
+
+This package extends the tidy representation of geospatial network data from the [sfnetworks package](https://luukvdmeer.github.io/sfnetworks/). This provides access to a rich set of further network analysis tools from the [tidygraph package](https://tidygraph.data-imaginist.com/index.html) as well as data manipulation from the [tidyverse](https://www.tidyverse.org/) family of packages.
 
 ## Installation
 
-To install the `dci` package from this github page follow these instructions:
+### From GitHub
+
+To install the development version of the `dci` package from this github page follow these instructions:
 ```{r}
 require(devtools)
 install_github("aarkilanian/dci")
 ```
-
-
-## Example
-
-Coming soon
